Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/auto_2.st
language core;
extend with #type-reconstruction, #sequencing;

fn main(n : auto) -> Bool {
	return succ(n);n
}